--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta property="og:url" content="vkasturia.github.io">
     <!--  Non-Essential, But Recommended -->
     <meta property="og:site_name" content="Vaibhav Kasturia | Research Associate">
-    <meta property="article:publisher" content="vkasturia.github.io">
+    <meta property="article:publisher" content="visheshkasturia.github.io">
     <meta property="og:image" content="">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@vbhvkas18">
@@ -83,7 +83,7 @@
     <nav class="hide-on-small-only">
       <ul class="side-nav fixed section table-of-contents">
         <li class="logo"><a id="logo-container" aria-label="Navigate to the beginning of the page" href="#" class="brand-logo teal-text active">
-            <h1>&nbsp;Vaibhav <br>&nbsp;Kasturia<span class="brown-text light">Research Associate</span></h1></a></li>
+            <h1>&nbsp;Vishesh <br>&nbsp;Kasturia<span class="brown-text light">Research Associate</span></h1></a></li>
         <li class="bold"><a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i class="mdi-social-person small"></i><span>About</span></a></li>
         <li class="bold"><a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark orange-text"><i class="mdi-social-school small"></i><span>Education</span></a></li>
         <li class="bold"><a aria-label="Navigate to the Awards section" href="#awards" class="waves-effect waves-dark red-text"><i class="mdi-action-grade small"></i><span>Awards</span></a></li>
